# CraftingInterpreters

./: .gitignore  README.md
rust_version/: .pre-commit-config.yaml  Cargo.toml  Makefile
rust_version/benchmark/: binary_trees.lox  equality.lox  equality.lox.nom  fib.lox  fib.py  instantiation.lox  instantiation.lox.nom  invocation.lox  invocation.lox.nom  method_call.lox  method_call.lox.nom  properties.lox  properties.lox.nom  string_equality.lox  string_equality.lox.nom  trees.lox  trees.lox.nom  zoo.lox
rust_version/benchmark/fib/: fib.lox  fib.rb
rust_version/programs/: circular.lox  debug.lox
rust_version/src/: arena.rs  bitwise.rs  chunk.rs  compiler.rs  config.rs  heap.rs  lib.rs  main.rs  native_functions.rs  scanner.rs  types.rs  value.rs  vm.rs
rust_version/src/compiler/: back.rs  error.rs  front.rs  mod.rs  rules.rs  variables.rs
rust_version/test/: basic.lox  long_globals.lox  long_locals.lox  precedence.lox  unexpected_character.lox
rust_version/test/assignment/: associativity.lox  global.lox  local.lox  syntax.lox  to_this.lox
rust_version/test/benchmark/: binary_trees.lox  instantiation.lox  invocation.lox  properties.lox  string_equality.lox  trees.lox
rust_version/test/block/: empty.lox  scope.lox
rust_version/test/bool/: equality.lox  not.lox
rust_version/test/break/: happy.lox  local_var.lox  no_semicolon.lox  outside_loop.lox  simple_for.lox  simple_while.lox  toniu.lox
rust_version/test/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
rust_version/test/class/: empty.lox  inherit_self.lox  inherited_method.lox  local_inherit_other.lox  local_inherit_self.lox  (+2 more)
(+378 files in other folders)
