[package]
name    = "rust_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
hashbrown = "0.12.3"
derivative = "2.2.0"
num_enum = "0.5.7"
paste = "1.0.9"
shrinkwraprs = "0.3.0"
humansize = "2.1.0"
slotmap = "1.0.6"

# Uncomment for valgrind profiling
#[profile.release]
#opt-level = 1