[package]
name    = "rust_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { version = "4.3.11", features = ["derive"] }
derivative   = "2.2.0"
rustc-hash   = "1.1.0"
humansize    = "2.1.3"
num_enum     = "0.6.1"
paste        = "1.0.13"
shrinkwraprs = "0.3.0"
slotmap      = "1.0.6"

# Uncomment for valgrind profiling
#[profile.release]
#opt-level = 1
